<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions0"
                android:textSize="@dimen/abc_text_size_large_material"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:text="@string/txtlbl_keyboardinput"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/abc_action_bar_default_padding_material"
                android:text="@string/instructions1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txtlbl_movingcells"
                android:textStyle="bold"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#686868"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@drawable/abc_ic_menu_cut_mtrl_alpha"
                    android:layout_weight=".3"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:src="@drawable/abc_ic_menu_paste_mtrl_am_alpha"
                    android:layout_weight=".3"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:src="@drawable/abc_ic_menu_copy_mtrl_am_alpha"
                    android:layout_weight=".3"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/abc_action_bar_default_padding_material"
                android:text="@string/instructions2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txtlbl_clearingcell"
                android:textStyle="bold"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtlbl_clear"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/abc_action_bar_default_padding_material"
                android:text="@string/instructions3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txtlbl_logic"
                android:textStyle="bold"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/abc_action_bar_default_padding_material"
                android:text="@string/instructions4"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtlbl_00"
                    android:textSize="@dimen/abc_text_size_small_material"
                    android:background="#FFFF"
                    android:textColor="@color/accent_material_light"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxEms="4"
                    android:text="Cxx"
                    android:hint="@string/txtlbl_empty"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:singleLine="true"
                    android:inputType="none"
                    android:maxLength="3"
                    android:textAlignment="center"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/abc_action_bar_default_padding_material"
                android:text="@string/instructions5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txtlbl_execution"
                android:textStyle="bold"
                android:id="@+id/textView6"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtlbl_run"
                    android:id="@+id/button2"
                    android:layout_weight=".5"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtlbl_step"
                    android:id="@+id/button1"
                    android:layout_weight=".5"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/abc_action_bar_default_padding_material"
                android:text="@string/instructions6"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/abc_action_bar_default_padding_material"
                android:text="@string/instructions7"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/helpExit"
                android:text="@string/btnlbl_helpdone"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
<!--Todo make more pretty-->

    </ScrollView>
</LinearLayout>